--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -1,4 +1,5 @@
 security:
+    hide_user_not_found: false
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
@@ -17,6 +18,8 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            custom_authenticator: App\Security\LoginFormAuthenticator
+            logout: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
