--- a/app/composer.json
+++ b/app/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "ramsey/uuid": "^4.2",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
